Fix dark mode report modal display

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -6691,7 +6691,18 @@ input::-webkit-inner-spin-button {
   .community-mentor-item:hover {
     background-color: $darker;
   }
-
+  #report-modal {
+    select {
+      background-color: $darker;
+      color: #e4e6eb;
+      border: none;
+    }
+    textarea {
+      background-color: $darker;
+      color: #e4e6eb;
+      border: none;
+    }
+  }
   #notification-circle {
     fill: #FF4646;
   }
